client/src/styles/nav.css
/* .nav {
  position: fixed;
  display: flex;
  height: 100%;
  z-index: 1; 
}

.side_nav_bar {
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: gray;
  width: 20vw;
}

.nav_ul {
  margin: 0;
  padding: 0;
}

.nav_li {
  text-decoration: none;
  list-style: none;
  font-size: 2rem;
  margin-top: 60px;
  color: white;
}

.nav_li a {
  text-decoration: none;
  color: inherit;
}
 */

.toolbar {
  position: fixed;
  width: 100%;
  top: 0;
  left: 0;
  background: url("https://cdn.hipwallpaper.com/m/50/59/G8xbSr.jpg") no-repeat;
  background-size: 100% auto;
  height: 72px;
}

.toolbar_navigation {
  display: flex;
  height: 100%;
  align-items: center;
  padding: 0 1rem;
}

.toolbar_logo {
  margin-left: 2rem;
}

#navbar_logo {
  width: 55px;
  height: 40px;
}

.toolbar_logo a {
  color: white;
  text-decoration: none;
  font-size: 1.5rem;
}

.spacer {
  flex: 1;
}

.toolbar_navigation_items a {
  color: white;
  text-decoration: none;
}

.toolbar_navigation_items ul {
  list-style: none;
  margin: none;
  padding: 0;
  display: flex;
}

.nav_li {
  padding: 0 0.5rem;
}

.toolbar_navigation_items a:hover,
.toolbar_navigation_items a:active{
  color: orange;
}







.page-enter {
  opacity: 0;
  transform: scale(1.1);
}

.page-enter-active {
  opacity: 1;
  transform: scale(1);
  transition: opacity 300ms, transform 300ms;
}

.page-exit {
  opacity: 1;
  transform: scale(1);
}

.page-exit-active {
  opacity: 0;
  transform: scale(0.9);
  transition: opacity 300ms, transform 300ms;
}

